# kivyandroidscanner

./: Dockerfile  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
