[tool.poetry]
name = "kivyandroidscanner"
version = "0.1.0"
description = "A Kivy app for scanning barcodes."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kivy = "^2.0.0"
cython = "^0.29.30"  # Make sure to use a version compatible with your other dependencies


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
